Wed Dec  8 03:26:51 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_bio.c (ossl_obj2bio): should not use fptr->f.
	  [ruby-dev:25101]

Wed Dec  8 03:26:41 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* runruby.rb: prepend LIBRUBY_SO to LD_PRELOAD as well as rubytest.rb.

Wed Dec 08 01:35:44 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (is_socket): reorder of function definitions.

Wed Dec 08 00:44:31 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (pipe_open): win32 bidirectional pipe support.

	* win32/win32.[ch] (rb_w32_pipe_exec): ditto.

	* win32/win32.[ch] (socketpair): new function. POSIX socketpair
	  emulation.

	* win32/win32.c (socketpair_internal): ditto.

Wed Dec  8 00:25:07 2004  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_version.rb: added version check test.
	  [ruby-dev:25053]

Tue Dec  7 15:40:38 2004  Tanaka Akira  <akr@m17n.org>

	* io.c (io_fwrite): avoid context switch before writing to stderr.
	  [ruby-dev:25080]

	* rubyio.h: refine deprecated declaration.

	* configure.in, file.c, io.c: remove useless check: fseeko, etc.

Tue Dec  7 13:42:07 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dir.c (dir_s_mkdir): win32 special processing doesn't need any
	  longer.

	* win32/win32.[ch] (rb_w32_mkdir): new function. POSIX.1 compatible
	  interface.

	* win32/win32.[ch] (rb_w32_rmdir): new function.

Tue Dec  7 00:27:37 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (proc_setgroups): [ruby-dev:25081]

Mon Dec  6 23:07:57 2004  Tanaka Akira  <akr@m17n.org>

	* configure.in: check -lsocket for socketpair and shutdown.
	  reported by Ville Mattila.  [ruby-core:03903]

Mon Dec  6 23:00:45 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (ac_cv_sizeof_rlim_t): setup for DJGPP.

	* io.c (is_socket, shutdown): define dummy macros for DJGPP.

	* process.c: use SIZEOF_RLIM_T instead of HAVE_RLIM_T for DJGPP.

Mon Dec  6 21:19:40 2004  NAKAMURA Usaku  <usa@ruby-lang.org>
